<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MoreActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutMore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/more"
            android:textColor="@color/black"
            android:textFontWeight="500"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutfeedBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutMore">

        <ImageView
            android:id="@+id/feedback_icon"
            android:layout_width="33dp"
            android:layout_height="34dp"
            android:padding="3dp"
            android:src="@drawable/ic_feedback_icon"
            app:layout_constraintBottom_toBottomOf="@+id/txtfeedback"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtfeedback" />

        <TextView
            android:id="@+id/txtfeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:drawablePadding="15dp"
            android:fontFamily="sans-serif"
            android:gravity="left"
            android:padding="10dp"
            android:text="Feedback"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutfeedBack">

        <ImageView
            android:id="@+id/Update_icon"
            android:layout_width="33dp"
            android:layout_height="34dp"
            android:src="@drawable/ic_update_icon"
            android:padding="3dp"
            app:layout_constraintBottom_toBottomOf="@+id/txtUpdate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtUpdate" />

        <TextView
            android:id="@+id/txtUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:drawablePadding="15dp"
            android:fontFamily="sans-serif"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/update"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutUpdate">

        <ImageView
            android:id="@+id/share_icon"
            android:layout_width="33dp"
            android:layout_height="34dp"
            android:src="@drawable/ic_share_icon"
            android:padding="3dp"
            app:layout_constraintBottom_toBottomOf="@+id/txtShare"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtShare" />

        <TextView
            android:id="@+id/txtShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:drawablePadding="15dp"
            android:fontFamily="sans-serif"
            android:gravity="left"
            android:padding="10dp"
            android:text="@string/share"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutPrivacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutShare">

        <ImageView
            android:id="@+id/privacy_icon"
            android:layout_width="33dp"
            android:layout_height="34dp"

            android:src="@drawable/ic_privacypolicy_icon"
            app:layout_constraintBottom_toBottomOf="@+id/txtPrivacy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtPrivacy" />

        <TextView
            android:id="@+id/txtPrivacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:drawablePadding="15dp"
            android:fontFamily="sans-serif"
            android:gravity="left"
            android:padding="10dp"
            android:text="Privacy Policy"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>